# ancestry-data-backend

./: .gitignore  README.md  pylintrc  pyproject.toml
src/: db_load.py  main.py
src/sql/: family.sql
tests/: unit_test.py
