[tool.poetry]
name = "ancestry"
version = "0.1.0"
description = ""
authors = ["Lisa Mieth"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.6.0"
jupyter = "^1.0.0"
pandas = "^1.1.5"
geopy = "^2.1.0"
datasette = "^0.54"
csvs-to-sqlite = "^1.2"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
