[tool.poetry]
name = "ancestry"
version = "0.1.0"
description = ""
authors = ["Lisa Mieth"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.6.0"
jupyter = "^1.0.0"
pandas = "^1.1.5"
geopy = "^2.1.0"
datasette = "^0.54"
csvs-to-sqlite = "^1.2"
SQLAlchemy = "^1.3.23"
python-dotenv = "^0.15.0"
psycopg2 = "^2.8.6"
treelib = "^1.6.1"
anytree = "^2.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
taskipy = "^1.7.0"

[tool.taskipy.tasks]
test =  "python -m unittest discover -p '*_test.py'"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
