[tool.poetry]
name = "ancestry"
version = "0.1.0"
description = ""
authors = ["Lisa Mieth"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
duckdb = "^0.9.2"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"
geopy = "^2.4.1"
numpy = "^2.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
taskipy = "^1.7.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pylint = "^2.6.0"

[tool.taskipy.tasks]
test =  "python -m unittest discover -p '*_test.py'"
lint = "pylint src tests"
build_data = "python src/main.py"
build_db = "python src/db_load.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
